# JniPrimer3

./: README.md  build.gradle  settings.gradle
jni/: build.gradle
jni/src/main/c/: edu_msu_cme_rdp_primerdesign_utils_Primer3Wrapper.h  main.c.bak  thal.h
src/main/cpp/: CMakeLists.txt  edu_msu_cme_rdp_primerdesign_utils_Primer3Wrapper.c  edu_msu_cme_rdp_primerdesign_utils_Primer3Wrapper.h  main.c  thal.c
src/main/java/edu/msu/cme/rdp/primerdesign/utils/: Primer3Wrapper.java
